# damping-dolphin

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  damping-dolphin.pro
.github/workflows/: dev.yml
form/: About.ui  FitSetting.ui  Guide.ui  MainWindow.ui
include/armadillo_bits/: config.hpp
res/: res.qrc
src/: About.cpp  About.h  DampingCurve.cpp  DampingCurve.h  DampingMode.cpp  DampingMode.h  FitSetting.cpp  FitSetting.h  Guide.cpp  Guide.h  MainWindow.cpp  MainWindow.h  Scratch.cpp  damping-dolphin.cpp  damping-dolphin.h
src/Scheme/: ObjectiveFunction.cpp  ObjectiveFunction.h  OptimizerTuning.hpp  Scheme  ThreeWiseMen.cpp  ThreeWiseMen.h  TwoCities.cpp  TwoCities.h  Unicorn.cpp  Unicorn.h  ZeroDay.cpp  ZeroDay.h  parallel_for.hpp
